service/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  labels:
    app: auth-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
        - name: auth-server-image
          image: registry.gitlab.com/gaia-x/data-infrastructure-federation-services/authenticationauthorization/auth-service-image
          imagePullPolicy: Always
          ports:
            - name: "http"
              containerPort: 9000
#            - name: "https"
#              containerPort: 9443

          readinessProbe:
            httpGet:                 
              path: "/actuator/health"
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30

          resources: {}
#        terminationMessagePath: /dev/termination-log
#        terminationMessagePolicy: File
#      dnsPolicy: ClusterFirst
      restartPolicy: Always
#      terminationGracePeriodSeconds: 30
