service/deploy/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: auth-server-service
  labels: 
    app: auth-server
spec: 
  ports: 
#    - port: 53582
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector: 
    app: auth-server
  type: LoadBalancer
#status:
#  loadBalancer: {}
