service/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "stickounet"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
  name: auth-server-ingress
#  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: auth-server-service
            port:
              number: 9000
        path: /
        pathType: Prefix
